--- a/DFF/Views/Home/Index.cshtml
+++ b/DFF/Views/Home/Index.cshtml
@@ -1,6 +1,85 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@using DFF.Models
+@model LoginViewModel
+@{
+    ViewBag.Title = "Log in";
+}
+
+<div class="jumbotron">
+    <h1>Welcome to Detroit Food Finder!</h1>
+
+
+@*<h2>@ViewBag.Title.</h2>*@
+<div class="row">
+    <div class="col-md-8">
+        <section id="loginForm">
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                @*<h4>Use a local account to log in.</h4>*@
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <div class="checkbox">
+                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe)
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <a href="/Account/Register">Join Now</a>
+                    </div>
+                </div>
+                <p><a href="~/Customer" class="btn btn-primary btn-lg">View Listings &raquo;</a></p>
+
+                @* Enable this once you have account confirmation enabled for password reset functionality
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
+            }
+        </section>
+    </div>
+    @*<div class="col-md-4">
+        <section id="socialLoginForm">
+            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+        </section>
+    </div>*@
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
+    @*<p class="lead">Pick an option below: </p>*@
+    @*<p><a href="~/Customer" class="btn btn-primary btn-lg">View Listings &raquo;</a>*@ @*<a href="~/Customer" class="btn btn-primary btn-lg">Join Now &raquo;</a></p>*@
+
+    @*<p><a href="http://localhost:62520/Customer/Add" class="btn btn-primary btn-lg">Add New Customer &raquo;</a></p>
+        <p><a href="http://localhost:62520/Customer/Delete" class="btn btn-primary btn-lg">Delete Data&raquo;</a></p>
+        <p><a href="http://localhost:62520/Customer/Modify" class="btn btn-primary btn-lg">Modify Data&raquo;</a></p>*@
+</div>
+
+@*@{
+    ViewBag.Title = "Home Page";
+}
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
@@ -28,4 +107,4 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
-</div>
+</div>*@
